# kai-assistant

./: README.md  ejecutar   pubspec.yaml  version.json
android/: build.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  llama-jni.cpp
android/app/src/main/kotlin/com/tuproyecto/kai/kai_app/: MainActivity.kt
docs/: version.json
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
linux/: CMakeLists.txt  my_application.cc
linux/flutter/: generated_plugins.cmake
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
